--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <main>
         <p>Téléchargez mon application en cliquant sur le bouton ci-dessous :</p>
-        <a href="https://drive.google.com/uc?export=download&id=1kNuVtT_1CvUuah43Xe87WT0r8-PSPj4a" download>
+        <a href="https://drive.google.com/file/d/1kNuVtT_1CvUuah43Xe87WT0r8-PSPj4a/uc?export=download=drive_link" download>
             <button>Télécharger l'application</button>
         </a>
     </main>
