--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur le site de mon application</h1>
+        <h1>Bienvenue sur le site de l'application Stalingrad</h1>
     </header>
     <main>
-        <p>Téléchargez mon application en cliquant sur le bouton ci-dessous :</p>
+        <p>Téléchargez l'application en cliquant sur le bouton ci-dessous :</p>
         <a href="https://drive.google.com/file/d/1kNuVtT_1CvUuah43Xe87WT0r8-PSPj4a/uc?export=download=drive_link" download>
             <button>Télécharger l'application</button>
         </a>
     </main>
     <footer>
-        <p>© 2025 Mon Application</p>
+        <p>© 2025 Application stalingrad</p>
     </footer>
 </body>
 </html>
