--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Télécharger Mon Application</title>
+    <title>Site sur la battaille de stalingrad</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur le site de l'application Stalingrad</h1>
+        <h1>Bienvenue sur le site de la battaille de Stalingrad</h1>
     </header>
     <main>
         <p>Téléchargez l'application en cliquant sur le bouton ci-dessous :</p>
