--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             border-radius: 5px;
         }
 
+        <h1>Mon Image</h1>
+    <!-- Balise pour afficher une image -->
+    <img src="image site\OIP.jpg" alt="Description de l'image" width="300" height="200">
+            
+
         button:hover {
             background-color: #0056b3;
         }
