--- a/index.html
+++ b/index.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Télécharger Mon Application</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+
+        button {
+            background-color: #28a745;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #218838;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Bienvenue sur le site de mon application</h1>
-    </header>
-    <main>
-        <p>Téléchargez mon application en cliquant sur le bouton ci-dessous :</p>
-        <a href="https://drive.google.com/uc?export=download&id=1kNuVtT_1CvUuah43Xe87WT0r8-PSPj4a" download>
-            <button>Télécharger l'application</button>
-        </a>
-    </main>
-    <footer>
-        <p>© 2025 Mon Application</p>
-    </footer>
+    <h1>Bienvenue sur mon site</h1>
+    <p>Cliquez ci-dessous pour télécharger l'application :</p>
+    <a href="https://drive.google.com/uc?export=download&id=1kNuVtT_1CvUuah43Xe87WT0r8-PSPj4a" download>
+        <button>Télécharger l'application</button>
+    </a>
 </body>
 </html>
